<?xml version="1.0"?>
<package format="2">
  <name>piksi_multi_rtk_gps</name>
  <version>0.0.0</version>
  <description>
    ROS node to read SBP messages from a Piksi Multi device.
  </description>

  <author email="marcot@ethz.ch">Marco Tranzatto</author>
  <author email="kaiho@ethz.ch">Kai Holtmann</author>

  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
