<?xml version="1.0"?>
<package format="2">
  <name>ethz_piksi_ros</name>
  <version>1.10.0</version>
  <description>Meta-package for the ethz_piksi_ros repository.</description>

  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>
  <author email="marcot@ethz.ch">Marco Tranzatto</author>
  <author email="kaiho@ethz.ch">Kai Holtmann</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>piksi_multi_rtk_ros</exec_depend>
  <exec_depend>piksi_pps_sync</exec_depend>
  <exec_depend>piksi_rtk_kml</exec_depend>
  <exec_depend>piksi_rtk_msgs</exec_depend>
  <!--exec_depend>piksi_v2_rtk_ros</exec_depend-->
  <exec_depend>rqt_gps_rtk_plugin</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
