<package format="2">
  <name>piksi_multi_cpp</name>
  <version>0.0.1</version>
  <description>A C++ ROS wrapper for Piksi Multi.</description>

  <author email="mpantic@ethz.ch">Michael Pantic</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>libsbp_catkin</depend>
  <depend>roscpp</depend>
  <depend>libsbp_ros_msgs</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>roslib</depend>

  <depend>libserialport_catkin</depend>
</package>
