<package format="2">
  <name>piksi_multi_interface</name>
  <version>0.0.1</version>
  <description>Push button and status LED interface.</description>

  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
