<?xml version="1.0"?>
<package format="2">
  <name>piksi_multi_msgs</name>
  <version>0.0.0</version>
  <description>
    ROS messages and services for the Piksi multi ROS driver.
  </description>

  <author email="mpantic@ethz.ch">Michael Pantic</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>std_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>
