<?xml version="1.0"?>
<package format="2">
  <name>piksi_multi_rtk_ros</name>
  <version>1.10.0</version>
  <description>
    ROS driver for Piksi Multi RTK GPS Receiver.
  </description>

  <author email="marcot@ethz.ch">Marco Tranzatto</author>
  <author email="kaiho@ethz.ch">Kai Holtmann</author>

  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>

</package>
