<?xml version="1.0"?>
<package format="2">
  <name>piksi_pps_sync</name>
  <version>0.0.0</version>
  <description>Tools to synchronize against the GPS clock.</description>

  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>
  <license>TBD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>
  <depend>cuckoo_time_translator</depend>
  <depend>sensor_msgs</depend>
</package>
