<?xml version="1.0"?>
<package format="2">
  <name>piksi_rtk_kml</name>
  <version>1.10.0</version>
  <description>
    ROS node to write KML file from Piksi messages.
  </description>

  <author email="marcot@ethz.ch">Marco Tranzatto</author>
  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>

</package>
