<?xml version="1.0"?>
<package format="2">
  <name>piksi_v2_rtk_ros</name>
  <version>1.10.0</version>
  <description>
    ROS driver for Piksi V2 RTK GPS Receiver.
  </description>

  <author email="marcot@ethz.ch">Marco Tranzatto</author>
  <maintainer email="marcot@ethz.ch">Marco Tranzatto</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
