<?xml version="1.0"?>
<package format="2">
  <name>rqt_gps_rtk_plugin</name>
  <version>1.10.0</version>
  <description>The rqt_gps_rtk_plugin package</description>

  <maintainer email="kaiho@ethz.ch">Kai Holtmann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
